--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
                     android:background="@android:color/transparent"
                     android:hint="συνθηματικό"
                     android:inputType="textPersonName"
-                    android:maxLength="10"
+
                     android:paddingStart="0dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -91,8 +91,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:hint="κωδικός"
-                    android:inputType="textPersonName"
-                    android:maxLength="10"
+                    android:inputType="textPassword"
                     android:paddingStart="0dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
