--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -6,20 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:behavior_hideable="true"
     android:paddingHorizontal="30dp"
-    android:paddingVertical="30dp"
+
+    app:behavior_hideable="true"
     app:behavior_peekHeight="0dp"
-    app:layout_behavior="LockBottomSheetBehaviour"
-    >
+    app:layout_behavior="LockBottomSheetBehaviour">
 
-
+        <View
+            android:id="@+id/username_line"
+            android:layout_width="90dp"
+            android:layout_marginTop="16dp"
+            android:layout_height="4dp"
+            android:backgroundTint="@color/black"
+            android:background="@drawable/ic_generic_line_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/submit_btn"
+            android:id="@+id/submit_all_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginVertical="30dp"
             android:background="@drawable/rebranding_rounded_black"
             android:clickable="true"
             android:foreground="?selectableItemBackground"
@@ -31,16 +39,17 @@
             android:textAppearance="@style/button_medium"
             android:textColor="@color/CoolGray"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/delete_cards"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/switch1" />
+            app:layout_constraintTop_toBottomOf="@+id/username_line" />
 
         <TextView
-            android:id="@+id/delete_card"
+            android:id="@+id/delete_cards"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="9dp"
             android:alpha="1"
             android:background="@drawable/rebranding_rounded_black"
             android:backgroundTint="@android:color/holo_red_light"
@@ -53,10 +62,10 @@
             android:text="διαγραφή όλων"
             android:textAppearance="@style/button_medium"
             android:textColor="@color/CoolGray"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/submit_all_btn"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submit_btn" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/submit_all_btn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
