--- a/app/src/main/res/layout/scanner_fragment.xml
+++ b/app/src/main/res/layout/scanner_fragment.xml
@@ -1,112 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="40dp"
     android:layout_marginVertical="80dp"
+
     android:background="@drawable/background_with_shadow"
     tools:context=".ScannerFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/manuallyText"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="32dp"
-            android:backgroundTint="@color/CoolGray"
-            android:fontFamily="@font/akkuratllgrk_black"
-            android:gravity="center"
-            android:text="Ή δώσε το χειροκίνητα"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scanneImage" />
+            android:layout_height="wrap_content">
 
 
-        <ImageView
-            android:id="@+id/scanneImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/scanner_24"
-            app:layout_constraintBottom_toTopOf="@+id/manuallyText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/logo_color" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/barcodeEdittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="32dp"
-            android:background="@null"
-            android:theme="@style/EditProfileEditTextTheme"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:boxStrokeColor="@color/white"
-
-            app:boxStrokeWidth="0dp"
-            app:hintTextAppearance="@style/small_text_bold1"
-            app:hintTextColor="@color/Gray3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/manuallyText">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/textInputEditText3"
-                style="@style/caption_bold"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/manuallyText"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:hint="barcode"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="32dp"
+                android:backgroundTint="@color/CoolGray"
+                android:fontFamily="@font/akkuratllgrk_black"
+                android:gravity="center"
+                android:text="Ή δώσε το χειροκίνητα"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scanneImage" />
 
-                android:inputType="textPersonName"
-                android:maxLength="10"
-                android:paddingStart="0dp" />
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <View
-            android:id="@+id/barcode_line"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:background="@drawable/ic_generic_line_gray"
-            app:layout_constraintEnd_toEndOf="@+id/barcodeEdittext"
-            app:layout_constraintStart_toStartOf="@+id/barcodeEdittext"
-            app:layout_constraintTop_toBottomOf="@+id/barcodeEdittext" />
+            <ImageView
+                android:id="@+id/scanneImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/scanner_24"
+                app:layout_constraintBottom_toTopOf="@+id/manuallyText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/logo_color" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/manualOkay"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
-            android:backgroundTint="@color/logo_color"
-            android:gravity="center"
-            android:text="αναζήτηση"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.473"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/barcodeEdittext" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/barcodeEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="32dp"
+                android:background="@null"
+                android:theme="@style/EditProfileEditTextTheme"
+                app:boxBackgroundColor="@android:color/transparent"
+                app:boxStrokeColor="@color/white"
 
+                app:boxStrokeWidth="0dp"
+                app:hintTextAppearance="@style/small_text_bold1"
+                app:hintTextColor="@color/Gray3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/manuallyText">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputEditText3"
+                    style="@style/caption_bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:hint="barcode"
+
+                    android:inputType="textPersonName"
+                    android:maxLength="10"
+                    android:paddingStart="0dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <View
+                android:id="@+id/barcode_line"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:background="@drawable/ic_generic_line_gray"
+                app:layout_constraintEnd_toEndOf="@+id/barcodeEdittext"
+                app:layout_constraintStart_toStartOf="@+id/barcodeEdittext"
+                app:layout_constraintTop_toBottomOf="@+id/barcodeEdittext" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/manualOkay"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="38dp"
+                android:backgroundTint="@color/logo_color"
+                android:gravity="center"
+                android:text="αναζήτηση"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.473"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/barcodeEdittext" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
         <RelativeLayout
             android:id="@+id/cameraScanner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +187,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginVertical="4dp"
                 android:layout_marginBottom="50dp"
-                android:layout_toRightOf="@id/centerHorizont">
+                android:layout_toEndOf="@id/centerHorizont">
 
                 <ImageView
                     android:id="@+id/flash_light"
@@ -185,7 +197,6 @@
                     android:backgroundTint="@color/CoolGray"
                     android:src="@drawable/turn_off_flash"
                     app:layout_constraintBottom_toBottomOf="parent"
-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -193,5 +204,6 @@
 
 
         </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
