--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -10,118 +10,193 @@
     </data>
 
 
-    <RelativeLayout
-        android:id="@+id/rl1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="3dp">
+     <androidx.constraintlayout.widget.ConstraintLayout
+         android:id="@+id/rl1"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+         <RelativeLayout
+             android:id="@+id/rl11"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/image"
+             <com.google.android.material.card.MaterialCardView
+                 android:id="@+id/cvImage"
+                 android:layout_width="100dp"
+                 android:layout_height="100dp"
+                 android:layout_margin="10dp"
+                 app:cardCornerRadius="10dp"
+                 app:cardElevation="3dp">
 
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/logo"/>
+                 <androidx.constraintlayout.widget.ConstraintLayout
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content">
 
-            </RelativeLayout>
-        </com.google.android.material.card.MaterialCardView>
+                     <ProgressBar
+                         android:id="@+id/progressBar"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         app:layout_constraintBottom_toBottomOf="@+id/image"
+                         app:layout_constraintEnd_toEndOf="@+id/image"
+                         app:layout_constraintStart_toStartOf="parent"
+                         app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
-            android:elevation="5dp"
-            android:layout_alignTop="@+id/cvImage"
-            android:layout_alignBottom="@+id/cvImage"
-            android:layout_toEndOf="@+id/cvImage"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="-20dp"
-            android:layout_marginEnd="10dp">
+                     <ImageView
+                         android:id="@+id/image"
+                         android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:scaleType="centerCrop"
+                         android:src="@drawable/logo"
+                         app:imageUrl="@{product.image}" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                 </androidx.constraintlayout.widget.ConstraintLayout>
+             </com.google.android.material.card.MaterialCardView>
 
-                <TextView
-                    android:id="@+id/quantity_txt"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:fontFamily="@font/nexalight"
-                    android:gravity="center"
+             <com.google.android.material.card.MaterialCardView
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_alignTop="@+id/cvImage"
+                 android:layout_alignBottom="@+id/cvImage"
+                 android:layout_marginStart="-20dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginEnd="10dp"
+                 android:layout_marginBottom="10dp"
+                 android:layout_toEndOf="@+id/cvImage"
+                 android:elevation="5dp"
+                 app:cardCornerRadius="10dp">
 
-                    android:text="Ποσότητα"
-                    android:textSize="13sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/price_txt"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                 <androidx.constraintlayout.widget.ConstraintLayout
+                     android:id="@+id/container"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/quantity"
-                    android:layout_width="0dp"
-                    android:layout_marginHorizontal="7dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:background="@color/CoolGray"
-                    android:gravity="center"
-                    android:text="@{String.valueOf(product.quantity)}"
-                    android:textColor="@color/logo_color"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/quantity_txt"
-                    app:layout_constraintStart_toStartOf="@+id/quantity_txt"
-                    app:layout_constraintTop_toBottomOf="@+id/quantity_txt" />
+                     <TextView
+                         android:id="@+id/quantity_txt"
+                         android:layout_width="0dp"
+                         android:layout_height="wrap_content"
+                         android:layout_marginStart="8dp"
+                         android:layout_marginTop="16dp"
+                         android:fontFamily="@font/nexalight"
+                         android:gravity="center"
 
-                <TextView
-                    android:id="@+id/price_txt"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/nexalight"
-                    android:gravity="center"
-                    android:maxLength="15"
-                    android:text="Τιμή"
-                    android:textSize="13sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/quantity_txt"
-                    app:layout_constraintTop_toTopOf="@+id/quantity_txt" />
+                         android:text="Ποσότητα"
+                         android:textSize="13sp"
+                         android:textStyle="bold"
+                         app:layout_constraintEnd_toStartOf="@+id/price_txt"
+                         app:layout_constraintStart_toStartOf="parent"
+                         app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:background="@color/CoolGray"
-                    android:gravity="center"
-                    android:text="@{String.valueOf(product.price)}"
-                    android:layout_marginHorizontal="4dp"
-                    android:textColor="@color/logo_color"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/price_txt"
-                    app:layout_constraintStart_toStartOf="@+id/price_txt"
-                    app:layout_constraintTop_toBottomOf="@+id/price_txt" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                     <TextView
+                         android:id="@+id/quantity"
+                         android:layout_width="0dp"
+                         android:layout_height="wrap_content"
+                         android:layout_marginHorizontal="7dp"
+                         android:layout_marginTop="3dp"
+                         android:background="@color/CoolGray"
+                         android:gravity="center"
+                         android:text="@{String.valueOf(product.quantity)}"
+                         android:textColor="@color/logo_color"
+                         android:textSize="16sp"
+                         android:textStyle="bold"
+                         app:layout_constraintEnd_toEndOf="@+id/quantity_txt"
+                         app:layout_constraintStart_toStartOf="@+id/quantity_txt"
+                         app:layout_constraintTop_toBottomOf="@+id/quantity_txt" />
+
+                     <TextView
+                         android:id="@+id/price_txt"
+                         android:layout_width="0dp"
+                         android:layout_height="wrap_content"
+                         android:fontFamily="@font/nexalight"
+                         android:gravity="center"
+                         android:maxLength="15"
+                         android:text="Τιμή"
+                         android:textSize="13sp"
+                         android:textStyle="bold"
+                         app:layout_constraintEnd_toEndOf="parent"
+                         app:layout_constraintHorizontal_bias="0.5"
+                         app:layout_constraintStart_toEndOf="@+id/quantity_txt"
+                         app:layout_constraintTop_toTopOf="@+id/quantity_txt" />
+
+                     <TextView
+                         android:id="@+id/price"
+                         android:layout_width="0dp"
+                         android:layout_height="wrap_content"
+                         android:layout_marginHorizontal="4dp"
+                         android:layout_marginTop="3dp"
+                         android:background="@color/CoolGray"
+                         android:gravity="center"
+                         android:text="@{String.valueOf(product.price)}"
+                         android:textColor="@color/logo_color"
+                         android:textSize="16sp"
+                         android:textStyle="bold"
+                         app:layout_constraintEnd_toEndOf="@+id/price_txt"
+                         app:layout_constraintStart_toStartOf="@+id/price_txt"
+                         app:layout_constraintTop_toBottomOf="@+id/price_txt" />
+                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        </com.google.android.material.card.MaterialCardView>
-    </RelativeLayout>
+             </com.google.android.material.card.MaterialCardView>
+         </RelativeLayout>
+
+         <LinearLayout
+             android:id="@+id/quantity_container"
+             android:layout_width="wrap_content"
+             android:layout_height="25dp"
+             android:translationY="-6dp"
+             android:orientation="horizontal"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:tint="@color/CoolGray1">
+
+             <ImageView
+                 android:id="@+id/minus_button"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 android:background="@drawable/rebranding_rounded_left"
+                 android:src="@drawable/ic_baseline_remove"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:tint="@color/black" />
+
+             <TextView
+                 android:id="@+id/ammount_text"
+                 android:layout_width="wrap_content"
+                 android:layout_height="25dp"
+                 android:layout_weight="1"
+                 style="@style/caption_bold"
+                 android:background="@color/zxing_transparent"
+                 android:gravity="center|center_vertical|center_horizontal"
+                 android:paddingHorizontal="8dp"
+                 android:text="@{product.quantity_minus == null ? `1` : product.quantity_minus}"
+                 android:textColor="@color/black"
+                 android:textSize="16sp" />
+
+             <ImageView
+                 android:id="@+id/plus_button"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 android:background="@drawable/rebranding_rounded_right"
+                 android:padding="5dp"
+                 android:src="@drawable/ic_baseline_add_24"
+                 app:tint="@color/black" />
+         </LinearLayout>
+
+
+
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </layout>
