--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_marginTop="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -105,7 +106,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/password_container" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewHttp"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="bottom"
@@ -134,7 +135,7 @@
 
                 app:hintTextColor="@color/Gray3"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/textViewHttp"
                 app:layout_constraintTop_toBottomOf="@+id/password_container">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -205,7 +206,7 @@
                 android:layout_height="33dp"
                 android:visibility="gone"
                 tools:visibility="visible"
-                app:constraint_referenced_ids="submit_btn,imageView,url_line,url_container,textView,password_line,password_container,username_line,username_container" />
+                app:constraint_referenced_ids="submit_btn,imageView,url_line,url_container,textViewHttp,password_line,password_container,username_line,username_container" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
