--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
     android:layout_marginVertical="80dp"
     android:background="@drawable/background_with_shadow"
     android:layout_height="match_parent"
-    tools:context=".ScannerFragment">
+    tools:context=".ui.ScannerFragment">
 
     <TextView
         android:id="@+id/email_label"
