--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="product"
-            type="com.example.eshophandling.ui.cards.product_response.Data" />
+            type="com.example.eshophandling.data.model.product_response.Data" />
     </data>
 
 
@@ -76,26 +76,41 @@
                      android:layout_height="match_parent">
 
                      <TextView
+                         android:id="@+id/barcode"
+                         android:layout_width="0dp"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="5dp"
+                         android:gravity="center"
+                         android:paddingStart="15dp"
+                         android:paddingEnd="5dp"
+                         android:text="@{product.sku}"
+                         android:textColor="@color/black"
+                         android:textStyle="bold"
+                         app:layout_constraintEnd_toEndOf="parent"
+                         app:layout_constraintStart_toStartOf="parent"
+                         app:layout_constraintTop_toTopOf="parent"
+                         tools:text="000ασδασδασδασδασδαασδ3" />
+                     <TextView
                          android:id="@+id/quantity_txt"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="8dp"
-                         android:layout_marginTop="16dp"
+                         android:layout_marginTop="1dp"
                          android:fontFamily="@font/nexalight"
                          android:gravity="center"
 
-                         android:text="Ποσότητα"
+                         android:text="@string/quantity"
                          android:textSize="13sp"
                          android:textStyle="bold"
                          app:layout_constraintEnd_toStartOf="@+id/price_txt"
                          app:layout_constraintStart_toStartOf="parent"
-                         app:layout_constraintTop_toTopOf="parent" />
+                         app:layout_constraintTop_toBottomOf="@+id/barcode" />
 
                      <LinearLayout
                          android:id="@+id/quantity_container"
                          android:layout_width="wrap_content"
-                         android:layout_height="20dp"
-                         android:layout_marginTop="5dp"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="3dp"
                          android:orientation="horizontal"
                          app:layout_constraintEnd_toEndOf="@+id/quantity_txt"
                          app:layout_constraintStart_toStartOf="@+id/quantity_txt"
@@ -108,7 +123,7 @@
                              android:layout_height="match_parent"
                              android:layout_weight="1"
                              android:background="@drawable/rebranding_rounded_left"
-                             android:padding="4dp"
+                             android:padding="3dp"
                              android:src="@drawable/ic_baseline_remove"
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +151,7 @@
                              android:layout_height="match_parent"
                              android:layout_weight="1"
                              android:background="@drawable/rebranding_rounded_right"
-                             android:padding="4dp"
+                             android:padding="3dp"
                              android:src="@drawable/ic_baseline_add_24"
                              app:tint="@color/black" />
                      </LinearLayout>
@@ -148,7 +163,7 @@
                          android:fontFamily="@font/nexalight"
                          android:gravity="center"
                          android:maxLength="15"
-                         android:text="Τιμή"
+                         android:text="@string/price"
                          android:textSize="13sp"
                          android:textStyle="bold"
                          app:layout_constraintEnd_toEndOf="parent"
