--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/scannerFragment"
 
-        android:name="com.example.eshophandling.ScannerFragment"
+        android:name="com.example.eshophandling.ui.ScannerFragment"
         android:label="scanner_fragment"
         tools:layout="@layout/scanner_fragment" />
     <fragment
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_cards" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.eshophandling.SettingsFragment"
+        android:name="com.example.eshophandling.ui.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
     <action android:id="@+id/action_global_scannerFragment" app:destination="@id/scannerFragment" app:popUpTo="@id/scannerFragment" />
