prepare for playstore

--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -49,37 +49,38 @@
         android:id="@+id/positionstxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/rebranding_rounded_black"
-        android:paddingHorizontal="10dp"
 
+        android:paddingHorizontal="10dp"
         android:paddingVertical="3dp"
         android:text="1/10"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/recyclerview"
         app:layout_constraintEnd_toEndOf="@+id/recyclerview"
-        app:layout_constraintTop_toTopOf="@+id/recyclerview" />
+        app:layout_constraintTop_toTopOf="@+id/recyclerview"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/show_list"
-        android:layout_width="47dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="50dp"
-        app:tint="?attr/colorControlNormal"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="44dp"
         android:src="@drawable/ic_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/show_bottomsheet"
-        android:layout_width="39dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="50dp"
-        app:tint="?attr/colorControlNormal"
-        android:src="@drawable/action_icon"
+        android:layout_width="108dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="44dp"
+
+        android:src="@drawable/shop"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/show_list"
+        app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Group
@@ -88,6 +89,19 @@
         android:layout_height="wrap_content"
         android:visibility="visible"
         app:constraint_referenced_ids="positionstxt,recyclerview" />
+
+    <TextView
+        android:id="@+id/total_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="49dp"
+        android:layout_marginEnd="121dp"
+        android:visibility="gone"
+        android:gravity="center"
+        android:text="Σύνολο\n12"
+        app:layout_constraintBottom_toBottomOf="@+id/show_bottomsheet"
+        app:layout_constraintEnd_toStartOf="@+id/show_list"
+        app:layout_constraintStart_toEndOf="@+id/show_bottomsheet" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
