--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -89,7 +89,7 @@
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent"
-                         tools:text="000ασδασδασδασδασδαασδ3" />
+                         tools:text="000" />
                      <TextView
                          android:id="@+id/quantity_txt"
                          android:layout_width="0dp"
@@ -179,6 +179,8 @@
                          android:layout_marginTop="3dp"
                          android:background="@color/CoolGray"
                          android:gravity="center"
+                         android:maxLines="1"
+                         android:ellipsize="end"
                          android:text="@{String.valueOf(product.price)}"
                          android:textColor="@color/logo_color"
                          android:textSize="16sp"
